workspace/kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: workspace-service
spec:
  selector:
    app: workspace
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 7681
  type: ClusterIP
